// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationRepositories renders with a repository 1`] = `
<div>
  <SettingsPageHeading
    action={
      <DropdownLink
        alwaysRenderMenu={true}
        anchorRight={true}
        caret={true}
        className="btn btn-primary btn-sm"
        disabled={false}
        title="Add Repository"
      >
        <MenuItem
          noAnchor={true}
        >
          <AddRepositoryLink
            onSuccess={undefined}
            orgId="org-slug"
            provider={
              Object {
                "config": Array [
                  Object {
                    "help": "Enter your repository name, including the owner.",
                    "label": "Repository Name",
                    "name": "name",
                    "placeholder": "e.g. getsentry/sentry",
                    "required": true,
                    "type": "text",
                  },
                ],
                "id": "github",
                "key": "github",
                "name": "GitHub",
              }
            }
          />
        </MenuItem>
      </DropdownLink>
    }
    title="Repositories"
  />
  <Panel>
    <PanelHeader
      disablePadding={true}
    >
      <Flex>
        <Box
          px={2}
        >
          Added Repositories
        </Box>
      </Flex>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <Box>
        <RepoRow
          key="4"
        >
          <Box
            flex="1"
            p={2}
          >
            <Flex
              direction="column"
            >
              <Box
                pb={1}
              >
                <strong>
                  repo-name
                </strong>
              </Box>
              <Box>
                <small />
                <small>
                   
                  — 
                  <a
                    href="https://github.com/example/repo-name"
                  >
                    https://github.com/example/repo-name
                  </a>
                </small>
              </Box>
            </Flex>
          </Box>
          <Box
            p={2}
          >
            <Confirm
              cancelText="Cancel"
              confirmText="Confirm"
              disabled={false}
              message="Are you sure you want to remove this repository?"
              onConfirm={[Function]}
              priority="primary"
            >
              <Button
                disabled={false}
                size="xsmall"
              >
                <span
                  className="icon icon-trash"
                />
              </Button>
            </Confirm>
          </Box>
        </RepoRow>
      </Box>
    </PanelBody>
  </Panel>
</div>
`;

exports[`OrganizationRepositories renders with github provider 1`] = `
<div>
  <SettingsPageHeading
    action={
      <DropdownLink
        alwaysRenderMenu={true}
        anchorRight={true}
        caret={true}
        className="btn btn-primary btn-sm"
        disabled={false}
        title="Add Repository"
      >
        <MenuItem
          noAnchor={true}
        >
          <AddRepositoryLink
            onSuccess={undefined}
            orgId="org-slug"
            provider={
              Object {
                "config": Array [
                  Object {
                    "help": "Enter your repository name, including the owner.",
                    "label": "Repository Name",
                    "name": "name",
                    "placeholder": "e.g. getsentry/sentry",
                    "required": true,
                    "type": "text",
                  },
                ],
                "id": "github",
                "key": "github",
                "name": "GitHub",
              }
            }
          />
        </MenuItem>
      </DropdownLink>
    }
    title="Repositories"
  />
  <div
    className="m-b-2"
  >
    <TextBlock>
      Connecting a repository allows Sentry to capture commit data via webhooks. This enables features like suggested assignees and resolving issues via commit message. Once you've connected a repository, you can associate commits with releases via the API.
       
      <span
        key="5"
      >
        <span
          key="0"
        >
          See our 
        </span>
        <a
          href="https://docs.sentry.io/learn/releases/"
          key="2"
        >
          <span
            key="1"
          >
            documentation
          </span>
        </a>
        <span
          key="3"
        >
           for more details.
        </span>
      </span>
    </TextBlock>
  </div>
  <Panel
    className="blankslate align-center p-x-2 p-y-1"
  >
    <div
      className="icon icon-lg icon-git-commit"
    />
    <h3>
      Sentry is better with commit data
    </h3>
    <TextBlock>
      Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
    </TextBlock>
    <p
      className="m-b-1"
    >
      <a
        className="btn btn-default"
        href="https://docs.sentry.io/learn/releases/"
      >
        Learn more
      </a>
    </p>
  </Panel>
</div>
`;

exports[`OrganizationRepositories renders without providers 1`] = `
<div>
  <SettingsPageHeading
    action={
      <DropdownLink
        alwaysRenderMenu={true}
        anchorRight={true}
        caret={true}
        className="btn btn-primary btn-sm"
        disabled={false}
        title="Add Repository"
      />
    }
    title="Repositories"
  />
  <div
    className="m-b-2"
  >
    <TextBlock>
      Connecting a repository allows Sentry to capture commit data via webhooks. This enables features like suggested assignees and resolving issues via commit message. Once you've connected a repository, you can associate commits with releases via the API.
       
      <span
        key="5"
      >
        <span
          key="0"
        >
          See our 
        </span>
        <a
          href="https://docs.sentry.io/learn/releases/"
          key="2"
        >
          <span
            key="1"
          >
            documentation
          </span>
        </a>
        <span
          key="3"
        >
           for more details.
        </span>
      </span>
    </TextBlock>
  </div>
  <Panel
    className="blankslate align-center p-x-2 p-y-1"
  >
    <div
      className="icon icon-lg icon-git-commit"
    />
    <h3>
      Sentry is better with commit data
    </h3>
    <TextBlock>
      Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
    </TextBlock>
    <p
      className="m-b-1"
    >
      <a
        className="btn btn-default"
        href="https://docs.sentry.io/learn/releases/"
      >
        Learn more
      </a>
    </p>
  </Panel>
</div>
`;
